Criando um botão

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
 	<h2>Nunca mais perderei meus projetos, a não ser que eu esqueça de dar um push</h2>
+	<button type="submit">Click em mim</button>
 </body>
 </html>
